fix a few small issues

--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,10 @@
         "laravel/horizon": "^5.6",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.1",
-        "opis/closure": "^3.6"
+        "opis/closure": "^3.6",
+        "spatie/laravel-ray": "^1.27"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.5",
-        "barryvdh/laravel-ide-helper": "^2.9",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^0.0.5",
