--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
             - '.:/var/www/html'
         networks:
             - sail
+        extra_hosts:
+            - "host.docker.internal:host-gateway"
         depends_on:
             - mysql
             - redis
