--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.1",
         "opis/closure": "^3.6",
+        "sentry/sentry-laravel": "^2.10",
         "spatie/laravel-ray": "^1.27"
     },
     "require-dev": {
