--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.13.0",
         "bootstrap": "^4.5.0",
-        "jquery": "^3.2",
+        "jquery": "^3.6.0",
         "laravel-mix": "^6.0.6",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.32.2",
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "bootstrap-select": "^1.13.18",
+        "popper.js": "^1.16.1",
         "tailwindcss": "^2.0.2"
     }
 }
