--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/horizon": "^5.6",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.1",
+        "livewire/livewire": "^2.9",
         "opis/closure": "^3.6",
         "sentry/sentry-laravel": "^2.10",
         "spatie/laravel-ray": "^1.27"
