--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,14 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.12",
+        "laravel/framework": "^8.75",
         "laravel/horizon": "^5.6",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.1",
         "livewire/livewire": "^2.9",
         "opis/closure": "^3.6",
         "sentry/sentry-laravel": "^2.10",
+        "spatie/laravel-backup": "^7.0",
         "spatie/laravel-ray": "^1.27"
     },
     "require-dev": {
@@ -32,9 +33,6 @@
         "phpunit/phpunit": "^9.3.3"
     },
     "config": {
-        "platform": {
-            "php": "8.0"
-        },
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true
