--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,10 @@
     "require": {
         "php": "^8.1",
         "barryvdh/laravel-dompdf": "^0.9.0",
+        "doctrine/dbal": "^3.3",
         "dompdf/dompdf": "^1.0",
         "fideloper/proxy": "^4.4",
+        "filament/filament": "^2.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
@@ -64,7 +66,8 @@
             "@php artisan package:discover --ansi"
         ],
         "post-update-cmd": [
-            "@php artisan horizon:publish --ansi"
+            "@php artisan horizon:publish --ansi",
+            "@php artisan filament:upgrade"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
