Update to laravel 10

--- a/composer.json
+++ b/composer.json
@@ -8,32 +8,28 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
-        "barryvdh/laravel-dompdf": "^0.9.0",
+        "php": "^8.3",
+        "barryvdh/laravel-dompdf": "^2.0.1",
         "doctrine/dbal": "^3.3",
-        "dompdf/dompdf": "^1.0",
-        "fideloper/proxy": "^4.4",
         "filament/filament": "^2.0",
-        "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.12",
+        "laravel/framework": "^10.0",
         "laravel/horizon": "^5.6",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.1",
-        "league/flysystem-cached-adapter": "~1.0",
-        "league/flysystem-sftp": "~1.0",
+        "laravel/ui": "^4.0",
+        "league/flysystem-aws-s3-v3": "^3.0",
+        "league/flysystem-sftp-v3": "^3.0",
         "livewire/livewire": "^2.9",
-        "opis/closure": "^3.6",
-        "sentry/sentry-laravel": "^2.10",
-        "spatie/laravel-backup": "^7.0"
+        "sentry/sentry-laravel": "^4.2.0",
+        "spatie/laravel-backup": "^8.0"
     },
     "require-dev": {
-        "facade/ignition": "^2.5",
+        "spatie/laravel-ignition": "^2.0",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.13.0",
         "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3",
+        "nunomaduro/collision": "^7.0",
+        "phpunit/phpunit": "^10.0",
         "spatie/laravel-ray": "^1.29"
     },
     "config": {
@@ -58,7 +54,6 @@
             "Tests\\": "tests/"
         }
     },
-    "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
         "post-autoload-dump": [
